--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.30",
     "@base-ui/react": "^1.2.0",
     "@clerk/nextjs": "^6.38.1",
     "@clerk/themes": "^2.4.55",
     "@hookform/resolvers": "^5.2.2",
+    "@mendable/firecrawl-js": "^4.13.0",
+    "ai": "^6.0.97",
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "convex": "^1.32.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.52.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
